# learn-web3_dapp

./: .env.example  .eslintrc  .gitignore  .gitmodules  .gitpod.yml  .npmrc  .prettierignore  CONTRIBUTE.md  README.md  jest.config.js  next.config.js  package-lock.json  package.json  tsconfig.json
__test__/: avalanche.test.ts  polygon.test.ts  secret.test.ts
components/icons/: index.tsx  polygon.tsx
components/protocols/: index.tsx
components/shared/: Home.jsx  Home.tsx  Protocol.tsx  SetupWizard.tsx  Sidebar.tsx  Step.tsx  WrappedProtocol.tsx  constants.ts
context/: index.tsx
contracts/celo/: HelloWorld.json
contracts/near/: compile.js
contracts/near/hello-near/: Cargo.toml
contracts/secret/: contract.wasm
docker/: README.md  docker-compose.yml
hooks/: index.ts  steps-hooks.ts  useColors.ts  useLocalStorage.ts  useSteps.ts
lib/: constants.ts  markdownURLs.js
markdown/: PREFACE.md  README.md
mysimplecounter/: Cargo.toml  NOTICE
pages/: [chainId].tsx  [chain].tsx  [protocol].tsx  _app.tsx  _document.tsx  avalanche.tsx  celo.tsx  ceramic.tsx  index.tsx  near.tsx  polkadot.tsx  polygon.tsx  secret.tsx  solana.tsx  tezos.tsx  the_graph.tsx
scripts/: fetchPathways.js
solana-wallet/: keypair.json
types/: avalanche-types.ts  index.ts  near-types.ts  polkadot-types.ts  polygon-types.ts  response-types.ts  solana-types.ts  types.ts
utils/: avalanche-utils.ts  colors-utils.ts  colors.ts  context.ts  datahub-utils.ts  datahub.ts  error.tsx  index.ts  markdown.ts  near-utils.ts  networks.ts  polygon-utils.ts  steps.ts  tracking-utils.ts
(+539 files in other folders)
